apps/base/stream-airsonic/deploy/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: airsonic
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: airsonic
      app.kubernetes.io/component: airsonic
  template:
    metadata:
      labels:
        app.kubernetes.io/name: airsonic
        app.kubernetes.io/component: airsonic
    spec:
      containers:
      - name: airsonic
        image: "registry.lan/airsonic-advanced:edge-11.0.0-SNAPSHOT.20220625052932"
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 4040
          name: airsonic
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /rest/ping
            port: airsonic
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: "1"
            memory: 512Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: keystore-volume
          mountPath: /opt/java/openjdk/lib/security/cacerts
          subPath: cacerts
        - name: airsonic-data
          mountPath: /var/airsonic
          subPath: data
        - name: airsonic-data
          mountPath: /var/playlists
          subPath: playlists
        - name: airsonic-multimedia
          mountPath: /mnt/multimedia
        # airsonic-inject-config is not used by the container directly
        # But mounting it enables the use of the reloader
        - name: airsonic-inject-config
          mountPath: /config
        - name: tmp-volume
          mountPath: /tmp
        - name: transcode-volume
          mountPath: /var/airsonic/transcode
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: airsonic-data
        persistentVolumeClaim:
          claimName: airsonic-data
      - name: airsonic-inject-config
        secret:
          secretName: airsonic-inject-config
          defaultMode: 0555
      - name: airsonic-multimedia
        persistentVolumeClaim:
          claimName: nfs-multimedia
      - name: cluster-ca-volume
        secret:
          secretName: cluster-ca
      - name: keystore-volume
        emptyDir: {}
      - name: tmp-volume
        emptyDir: {}
      - name: transcode-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
