apps/base/stream-airsonic/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airsonic
spec:
  ports:
  - port: 80
    targetPort: 4040
  selector:
    app.kubernetes.io/name: airsonic
    app.kubernetes.io/component: airsonic
